Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16241

Kernel 3.10 Build Fail on Master (3ffcb5b70) with NL_SET_ERR_MSG not defined

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

      Master is at: 3ffcb5b70

      Kernel : 3.10

      Build falied with:

       

      make[3]: Entering directory `/usr/src/kernels/3.10.0-957.el7_lustre.x86_64'
        CC [M]  /root/mrp/lustre-xx-3.10/lustre-release/lustre/obdclass/kernelcomm.o
        CC [M]  /root/mrp/lustre-xx-3.10/lustre-release/lustre/osp/osp_dev.o
      /root/mrp/lustre-xx-3.10/lustre-release/lustre/obdclass/kernelcomm.c: In function ‘lustre_device_list_start’:
      /root/mrp/lustre-xx-3.10/lustre-release/lustre/obdclass/kernelcomm.c:151:4: error: implicit declaration of function ‘NL_SET_ERR_MSG’ [-Werror=implicit-function-declaration]
          NL_SET_ERR_MSG(extack, "No devices found");
          ^
      /root/mrp/lustre-xx-3.10/lustre-release/lustre/obdclass/kernelcomm.c:151:19: error: ‘extack’ undeclared (first use in this function)
          NL_SET_ERR_MSG(extack, "No devices found");
                         ^
      /root/mrp/lustre-xx-3.10/lustre-release/lustre/obdclass/kernelcomm.c:151:19: note: each undeclared identifier is reported only once for each function it appears in
      /root/mrp/lustre-xx-3.10/lustre-release/lustre/obdclass/kernelcomm.c: In function ‘lustre_device_list_dump’:
      /root/mrp/lustre-xx-3.10/lustre-release/lustre/obdclass/kernelcomm.c:188:19: error: ‘extack’ undeclared (first use in this function)
          NL_SET_ERR_MSG(extack, "failed to send key table");
       
      

       

      Looks like NL_SET_ERR_MSG is defined under net/genetlink.h after 4.x kernel. Not available under 3.X kernel. Works on 4.18

            arshad512 Arshad Hussain
            arshad512 Arshad Hussain
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: